--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,13 @@
-<h1>Hello {{ userName }}</h1>
+<nav>
+  <ul>
+    <li>
+      <a routerLink="/weather">Weather</a>
+    </li>
 
-<div>
-  <app-weather-widget></app-weather-widget>
-</div>
+    <li>
+      <a routerLink="/todo">TODO List</a>
+    </li>
+  </ul>
+</nav>
+
+<router-outlet></router-outlet>
