city selector to quickly switch between cities, service back to using observable, conversion happens in widget component

--- a/src/app/weather/city-selector/city-selector.component.html
+++ b/src/app/weather/city-selector/city-selector.component.html
@@ -1,1 +1,5 @@
-<p>city-selector works!</p>
+<select [ngModel]="selectedCity" (ngModelChange)="selectedCityChanged($event)">
+  @for (city of cities; track city.name) {
+    <option [ngValue]="city">{{ city.name }}</option>
+  }
+</select>
