--- a/src/app/pages/weather-page/weather-page.component.html
+++ b/src/app/pages/weather-page/weather-page.component.html
@@ -1,5 +1,7 @@
 <div class="weather-page">
-  <app-city-selector></app-city-selector>
+  <app-city-selector (citySelected)="citySelected($event)"></app-city-selector>
 
-  <app-weather-widget class="widget"></app-weather-widget>
+  @if (selectedCity(); as selectedCity) {
+    <app-weather-widget class="widget" [selectedCity]="selectedCity"></app-weather-widget>
+  }
 </div>
