--- a/src/app/weather/weather-widget/weather-widget.component.css
+++ b/src/app/weather/weather-widget/weather-widget.component.css
@@ -5,25 +5,18 @@
   border-radius: 8px;
   color: #fff;
 
-  & .input-area {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    margin-bottom: 24px;
-  }
+  & .wind {
+    & .wind-direction {
+      margin-top: 16px;
 
-  & .weather-display {
-    & .wind {
-      & .wind-direction {
-        & .needle {
-          background-image: url('/assets/images/compass-needle.svg');
-          background-size: contain;
-          background-repeat: no-repeat;
-          background-position: center;
-          display: inline-block;
-          width: 50px;
-          aspect-ratio: 1;
-        }
+      & .needle {
+        background-image: url('/assets/images/compass-needle.svg');
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        display: inline-block;
+        width: 50px;
+        aspect-ratio: 1;
       }
     }
   }
