complete implementation of list

--- a/src/app/pages/todo-page/todo-page.component.html
+++ b/src/app/pages/todo-page/todo-page.component.html
@@ -1,6 +1,6 @@
-<main class="todo-page">
+<main class="todos-page">
   <div class="list-head">
-    <span class="count">{{ todos().length }} Todos(s)</span>
+    <span class="count">{{ todos().length }} Todo(s)</span>
     <button>Ein TODO hinzufügen</button>
   </div>
 
