--- a/src/app/todo/todo-list/todo-list.component.html
+++ b/src/app/todo/todo-list/todo-list.component.html
@@ -17,6 +17,8 @@
         <button (click)="deleteClicked.emit(todo)">Löschen</button>
       </div>
     </div>
+
+    <div class="todo-description">{{ todo.description }}</div>
   </li>
   }
 </ul>
