--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,7 @@ button {
   background-color: #fff;
   padding: 6px 12px;
   border-radius: 2px;
+  cursor: pointer;
 
   &:focus {
     background-color: #eee;
